validation des docs

--- a/src/app/modules/admin/concours/publish-result/publish-result.component.html
+++ b/src/app/modules/admin/concours/publish-result/publish-result.component.html
@@ -5,14 +5,18 @@
     <div class="flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between p-6 sm:py-8 sm:px-10 border-b bg-card dark:bg-transparent">
         <div class="flex-1 min-w-0">
             <div class="mt-2">
-                <h2 class="text-3xl md:text-4xl font-extrabold tracking-tight leading-7 sm:leading-10 truncate">
+                <h2 *ngIf="element == 'resultat'" class="text-3xl md:text-4xl font-extrabold tracking-tight leading-7 sm:leading-10 truncate">
                   Publication du résultat pour {{concours?.name}}
+                </h2>
+                <h2 *ngIf="element == 'dossier'"
+                    class="text-3xl md:text-4xl font-extrabold tracking-tight leading-7 sm:leading-10 truncate">
+                    Vérification des dossiers pour {{concours?.name}}
                 </h2>
             </div>
         </div>
 
 
-        <div class="flex items-center">
+        <div *ngIf="element == 'resultat'" class="flex items-center">
             <button
                 (click)="publishResult()"
                 [disabled]="!resultatName || (admisArr.length == 0)"
@@ -38,7 +42,7 @@
                     mat-icon-button>
                     <mat-icon [svgIcon]="'heroicons_outline:menu'"></mat-icon>
                 </button>
-                <mat-form-field style="width: 100%" class="fuse-mat-rounded fuse-mat-dense fuse-mat-no-subscript flex-auto ml-4 lg:ml-0">
+                <mat-form-field *ngIf="element == 'resultat'" style="width: 100%" class="fuse-mat-rounded fuse-mat-dense fuse-mat-no-subscript flex-auto ml-4 lg:ml-0">
                     <mat-icon
                         class="icon-size-5"
                         [svgIcon]="'heroicons_solid:chart-bar'"
