--- a/src/app/modules/admin/concours/publish-result/validation-dossier/validation-dossier.component.html
+++ b/src/app/modules/admin/concours/publish-result/validation-dossier/validation-dossier.component.html
@@ -31,7 +31,9 @@
                 <ng-container matColumnDef="accepted">
                     <th mat-header-cell *matHeaderCellDef> Etat du dossier </th>
                     <td mat-cell *matCellDef="let element">
-                        <div [innerHTML]="element.accepted == true ? 'ACCEPTÉ' : 'REJETTÉ'" class="docState" [ngClass]="element.accepted == true ? 'docAccepted' : 'docRejected'"></div>
+                        <div [innerHTML]="element.accepted" class="docState"
+                             [ngClass]="{'docAccepted': element.accepted == 'ACCEPTÉ', 'docTraitement': element.accepted == 'TRAITEMENT', 'docRejected': element.accepted == 'REJETTÉ'}">
+                        </div>
                     </td>
                 </ng-container>
 
@@ -71,14 +73,63 @@
                             <div class="flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between p-6 sm:py-8 sm:px-10 border-b bg-card dark:bg-transparent">
                                 <div class="flex-1 min-w-0">
                                     <div class="mt-2">
-                                        <mat-checkbox matTooltip="Cochez pour accepter" (change)="getCheckValue($event, element)" [checked]="checkPostulantChecked(element)" color="primary" class="example-margin"></mat-checkbox>
+                                        <mat-checkbox
+                                            *ngIf="(element.accepted == 'TRAITEMENT') || (element.accepted == 'REJETTÉ')"
+                                            matTooltip="Cochez pour accepter"
+                                            style="margin-bottom: 15px;"
+                                            (change)="getCheckValue($event, element)"
+                                            [checked]="checkPostulantChecked(element)"
+                                            color="primary" class="example-margin">
+                                            ACCEPTEZ
+                                        </mat-checkbox>
+                                        <mat-checkbox
+                                            *ngIf="element.accepted == 'ACCEPTÉ'"
+                                            matTooltip="Cochez pour rejetter"
+                                                      (change)="getCheckValue($event, element)"
+                                                      [checked]="checkPostulantChecked(element)" color="primary"
+                                                      class="example-margin">
+                                            REJETTEZ
+                                        </mat-checkbox>
                                     </div>
                                 </div>
 
 
                                 <div class="flex items-center">
                                     <div style="height: 600px; width: 100%; overflow: scroll;" class="flex items-center flex-auto">
-                                        <img *ngIf="(element.type == 'image/jpeg') || (element.type == 'image/jpg') || (element.type == 'image/png') " [src]="makeDownloadUrl(element.path)">
+
+                                        <div *ngIf="(element.type == 'image/jpeg') || (element.type == 'image/jpg') || (element.type == 'image/png') " class="imgDiv">
+                                            <img [src]="makeDownloadUrl(element.path)">
+                                        </div>
+
+                                            <div *ngIf="(element.type == 'application/pdf')">
+                                                <button
+                                                    (click)="zoomPDF('minus')"
+                                                    matTooltip="Réduire"
+                                                    class="min-w-10 min-h-7 h-7 px-2 leading-6 zoomBtnMinus"
+                                                    mat-stroked-button>
+                                                    <mat-icon
+                                                        class="icon-size-5"
+                                                        [svgIcon]="'heroicons_solid:minus'"></mat-icon>
+                                                </button>
+                                                <button
+                                                    (click)="zoomPDF('plus')"
+                                                    matTooltip="Agrandir"
+                                                    class="min-w-10 min-h-7 h-7 px-2 leading-6 zoomBtnPlus"
+                                                    mat-stroked-button>
+                                                    <mat-icon
+                                                        class="icon-size-5"
+                                                        [svgIcon]="'heroicons_solid:plus'"></mat-icon>
+                                                </button>
+                                                <pdf-viewer [src]="makeDownloadUrl(element.path)"
+                                                            [render-text]="true"
+                                                            [original-size]="false"
+                                                            [zoom]="zoom"
+                                                            style="width: 900px; height: 600px"
+                                                ></pdf-viewer>
+
+                                            </div>
+
+
                                     </div>
                                 </div>
                             </div>
