--- a/src/app/modules/admin/resultat/liste-postulant/liste-postulant.component.html
+++ b/src/app/modules/admin/resultat/liste-postulant/liste-postulant.component.html
@@ -12,21 +12,21 @@
         </div>
 
 
-<!--        <div class="flex items-center">-->
-<!--            <button-->
-<!--                (click)="publishResult()"-->
-<!--                [disabled]="!resultatName || (admisArr.length == 0)"-->
-<!--                class="ml-4 px-1 sm:px-4 min-w-10"-->
-<!--                mat-flat-button-->
-<!--                [color]="'primary'"-->
-<!--            >-->
-<!--                <mat-icon-->
-<!--                    class="icon-size-5"-->
-<!--                    [svgIcon]="'heroicons_solid:save'"></mat-icon>-->
-<!--                <span class="hidden sm:inline-block ml-2">Publiez le résultat</span>-->
+        <div class="flex items-center">
+            <button
+                (click)="exportAsXLSX()"
+                matTooltip="Exporter en excel"
+                class="ml-4 px-1 sm:px-4 min-w-10"
+                mat-flat-button
+                [color]="'primary'"
+            >
+                <mat-icon
+                    class="icon-size-5"
+                    [svgIcon]="'heroicons_solid:download'"></mat-icon>
+                <span class="hidden sm:inline-block ml-2">Exportez le résultat en exel</span>
 <!--                <mat-spinner [diameter]="20" *ngIf="isPublish == true"></mat-spinner>-->
-<!--            </button>-->
-<!--        </div>-->
+            </button>
+        </div>
     </div>
 
 
@@ -54,17 +54,6 @@
                 </mat-form-field>
             </div>
             <table mat-table [dataSource]="resultats" class="mat-elevation-z8">
-                <!-- Position Column -->
-<!--                <ng-container matColumnDef="action">-->
-<!--                    <th mat-header-cell *matHeaderCellDef>-->
-<!--                        Cochez les admis-->
-<!--                    </th>-->
-<!--                    <td mat-cell *matCellDef="let element">-->
-<!--                        <section class="example-section">-->
-<!--                            <mat-checkbox (change)="getCheckValue($event, element)" [checked]="checkPostulantChecked(element)" color="primary" class="example-margin"></mat-checkbox>-->
-<!--                        </section>-->
-<!--                    </td>-->
-<!--                </ng-container>-->
 
                 <ng-container matColumnDef="prenom">
                     <th mat-header-cell *matHeaderCellDef> Prénom</th>
